adding the html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,49 @@
     <title>Dev Links</title>
   </head>
   <body>
-    <p>Hello World</p>
+    <div id="container">
+      <div id="profile">
+        <img src="./assets/avatar.png" alt="Foto de imagem principal" />
+        <p>@ChristieCardoso</p>
+      </div>
+
+      <div id="switch">
+        <button></button>
+        <span></span>
+      </div>
+
+      <div>
+        <ul>
+          <li>
+            <a href="https://github.com/ChristieCardoso" target="_blank"
+              >Meu portfólio</a
+            >
+          </li>
+          <li>
+            <a href="#">Linkedin</a>
+          </li>
+          <li>
+            <a href="#">Facebook</a>
+          </li>
+          <li>
+            <a href="#">WhatsApp</a>
+          </li>
+        </ul>
+      </div>
+      <div id="social-links">
+        <a href="https://github.com/ChristieCardoso" target="_blank">
+          <ion-icon name="logo-github"></ion-icon>
+        </a>
+        <a href="#">
+          <ion-icon name="logo-instagram"></ion-icon>
+        </a>
+        <a href="#">
+          <ion-icon name="logo-youtube"></ion-icon>
+        </a>
+        <a href="#">
+          <ion-icon name="logo-linkedin"></ion-icon>
+        </a>
+      </div>
+    </div>
   </body>
 </html>
