--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
 
       <div id="switch">
-        <button></button>
+        <button onclick="toggleMode()"></button>
         <span></span>
       </div>
 
@@ -63,5 +63,6 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <script src="/script.js"></script>
   </body>
 </html>
