--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
             >
           </li>
           <li>
-            <a href="#">Linkedin</a>
+            <a
+              href="https://www.linkedin.com/in/christie-cardoso-cavalcante-164a28235"
+              target="_blank"
+              >Linkedin</a
+            >
           </li>
           <li>
             <a href="#">Facebook</a>
@@ -44,14 +48,17 @@
         <a href="https://github.com/ChristieCardoso" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
-        <a href="#">
+        <a href="https://www.instagram.com/chriscardoso.eth" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
+          <a
+            href="https://www.linkedin.com/in/christie-cardoso-cavalcante-164a28235"
+            target="_blank"
+          >
+            <ion-icon name="logo-linkedin"></ion-icon>
+          </a>
         </a>
         <a href="#">
           <ion-icon name="logo-youtube"></ion-icon>
-        </a>
-        <a href="#">
-          <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
     </div>
